# panda-pomodoro

./: .gitignore  ADMIN_BUILD_ALTERNATIVE.md  BUILD_FIX.md  BUILD_MAC_INSTRUCTIONS.md  BUILD_OUTPUT_LOCATIONS.md  BUTTON_CHECKLIST.md  DISTRIBUTION_GUIDE.md  FINAL_BUILD_FIX.md  FIX_STANDALONE_EXE.md  GITHUB_SETUP.md  HOW_TO_RUN.md  IF_BUILD_FAILS.md  PREPARE_DISTRIBUTION.ps1  PUSH_TO_GITHUB.ps1  QUICK_BUILD_FIX.md  README.md  REBUILD_WITH_CUSTOM_PROTOCOL.md  ROOT_CAUSE_OS_ERROR_5.md  SEE_BUILD_PROGRESS.md  SETUP.md  SETUP_GITHUB.md  START.md  UI_SIZES.md  UPDATE_PORTABLE_BUNDLE.ps1  UPLOAD_TO_DRIVE.ps1  UPLOAD_TO_GOOGLE_DRIVE.md  WHERE_BUILD_IS_BUILDING.md  YOUTUBE_DOWNLOAD_FIX.md  build-debug-first.ps1  build-gnu.ps1  build-with-alternative-target.ps1  build-with-vs.ps1  bundle-ytdlp.ps1  dev-vs.ps1  index.html  install-mingw.ps1  install-rust.ps1  monitor-build.ps1  package-lock.json  package.json  (+5 more)
.github/workflows/: build.yml
src/: App.svelte  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: commands.rs  main.rs
src/assets/buttons/: BUTTON_ASSETS_CHECKLIST.md  README.md
src/assets/buttons/music/: .gitkeep
src/assets/buttons/other/: .gitkeep
src/assets/buttons/settings/: .gitkeep
src/assets/buttons/timer/: .gitkeep
src/assets/character/: CHARACTER_CHECKLIST.md  README.md
src/components/: Character.svelte  Controls.svelte  MusicPlayer.svelte  PomodoroTimer.svelte  SettingsPanel.svelte  TimerDisplay.svelte
src/stores/: settingsStore.ts  timerStore.ts
