[package]
name = "cute-pomodoro-timer"
version = "1.0.0"
description = "A cute pixel art style pomodoro timer with music playlist"
authors = ["talalcodes83"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "http-all", "notification-all", "store-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = { "tauri/custom-protocol" }

