[package]
name = "cute-pomodoro-timer"
version = "1.0.0"
description = "A cute pixel art style pomodoro timer with music playlist"
authors = ["talalcodes83"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-hide", "window-start-dragging", "window-unmaximize", "window-maximize", "window-show", "window-minimize", "window-unminimize", "window-close", "dialog-save", "fs-read-dir", "fs-remove-dir", "fs-create-dir", "shell-execute", "fs-write-file", "fs-rename-file", "dialog-open", "fs-read-file", "fs-remove-file", "shell-open", "http-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

