[package]
name = "cute-pomodoro-timer"
version = "1.0.0"
description = "A cute pixel art style pomodoro timer with music playlist"
authors = ["talalcodes83"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "window-unmaximize", "window-close", "window-hide", "window-start-dragging", "fs-rename-file", "window-minimize", "window-maximize", "fs-create-dir", "fs-write-file", "fs-remove-file", "fs-remove-dir", "fs-read-file", "dialog-save", "shell-execute", "window-unminimize", "window-show", "fs-read-dir", "shell-open", "http-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
incremental = false

